# docxmint

./: .gitignore  CHANGELOG.md  README.md  docx_native_v1_spec.md  docxmint.sln  fastdocx.sln  navyfox.sln  pyproject.toml
.github/workflows/: build-native.yml  ci.yml  release.yml
docs/: DESIGN.md  concepts.md  conf.py  index.md  quickstart.md
docxmint/: __init__.py  __init__.pyi  _attrs.py  _block.py  _collection.py  _collection.pyi  document.py  document.pyi  errors.py  errors.pyi  formats.py  hyperlink.py  image.py  paragraph.py  paragraph.pyi  run.py  run.pyi  section.py  section.pyi  styles.py  table.py  table.pyi
docxmint/_native/: __init__.py  handle.py
docxmint/_proxy/: __init__.py  base.py  descriptors.py
fastdocx/: __init__.py  __init__.pyi  _attrs.py  _block.py  _collection.py  _collection.pyi  collection.py  collection.pyi  document.py  document.pyi  enums.py  errors.py  errors.pyi  font.py  formats.py  formats.pyi  hyperlink.py  image.py  paragraph.py  paragraph.pyi  run.py  run.pyi  section.py  section.pyi  styles.py  styles.pyi  table.py  table.pyi  units.py
fastdocx/_native/: __init__.py  bindings.py  handle.py  loader.py
fastdocx/_proxy/: __init__.py  base.py  descriptors.py
fastdocx/compat/: document.py
native/DocxMint.Native/: DocumentBuilder.Collections.cs  DocumentBuilder.Document.cs  DocumentBuilder.Images.cs  DocumentBuilder.Lists.cs  DocumentBuilder.Properties.cs  DocumentBuilder.Styles.cs  DocumentBuilder.Tables.cs  DocumentBuilder.cs  DocxMint.Native.csproj  NativeExports.cs
native/FastDocx.Native/: DocumentBuilder.Collections.cs  DocumentBuilder.Document.cs  DocumentBuilder.Images.cs  DocumentBuilder.Lists.cs  DocumentBuilder.Paragraphs.cs  DocumentBuilder.Properties.cs  DocumentBuilder.Styles.cs  DocumentBuilder.Tables.cs  DocumentBuilder.cs  FastDocx.Native.csproj  NativeExports.cs  rd.xml
native/NavyFox.Native/: DocumentBuilder.Collections.cs  NativeExports.cs  (+9 more)
navyfox/: __init__.py  __init__.pyi  _attrs.py  _block.py  _collection.py  _collection.pyi  document.py  document.pyi  errors.pyi  formats.py  hyperlink.py  image.py  paragraph.py  paragraph.pyi  run.py  run.pyi  section.py  section.pyi  styles.py  styles.pyi  table.py  table.pyi
notebooks/: benchmark.ipynb  demo.ipynb
scripts/: benchmark.py  check_struct_layouts.py  generate_charts.py
tests/: bench_vs_python_docx.py
(+50 files in other folders)
