[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fastdocx"
version = "0.1.0"
description = "Deep DOCX manipulation via a C# Native AOT shared library"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "cffi>=1.17",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.11",
    "types-cffi",
    "ruff>=0.6",
    "pytest>=8",
    "pytest-cov>=5",
    "python-docx>=1.1",
    "build>=1.2",
    "twine>=5",
]

[tool.hatch.build.targets.wheel]
packages = ["fastdocx"]

[tool.mypy]
strict = true
python_version = "3.11"
exclude = ["tests/"]

[[tool.mypy.overrides]]
module = ["cffi.*", "docx.*"]
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.isort]
known-first-party = ["fastdocx"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "nbconvert>=7.17.0",
]
